Falta diseño ventana emergente y lógica.

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.practica3modulosfx/com.example.practica3modulosfx.HelloApplication
+                            <mainClass>com.example.practica3modulosfx/com.example.practica3modulosfx.MatriculaApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
